--- a/fichas-front/package.json
+++ b/fichas-front/package.json
@@ -20,6 +20,9 @@
     "@angular/router": "~12.2.0",
     "@ckeditor/ckeditor5-angular": "^2.0.2",
     "@ckeditor/ckeditor5-build-classic": "^31.0.0",
+    "@popperjs/core": "^2.11.0",
+    "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.7.2",
     "jquery": "^3.6.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
